Stop scrollbar from causing content shift
When a note reaches the point where a scrollbar is needed the entire application shifts to the left slightly to accommodate the width of the scrollbar.

This uses the `overflow-y: overlay`  css property which was recently readded to Chrome, though it doesn't have compatibility with other browsers and is simply left with `overflow-y: auto` elsewhere.

In the future browsers will implement `scrollbar-gutter` which should be a globally available method of fixing this problem but that is still likely quite far away.

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -198,3 +198,16 @@
 .cp__sidebar-main-content[data-is-global-graph-pages='true'] {
   padding: 0;
 }
+
+@supports not (overflow-y: overlay) {
+  .scrollbar-spacing {
+    overflow-y: auto;
+  }
+}
+
+@supports (overflow-y: overlay) {
+  .scrollbar-spacing {
+    overflow-y: overlay;
+  }
+}
+
